--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,7 @@
 name: Code Style
 
-on: [ push, pull_request ]
+on: [ push, pull_request, workflow_dispatch ]
 
 jobs:
   test-php:
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v2
-
-    - name: Install composer dependencies
-      run: composer install
-
-    - name: Run composer tests
-      run: composer test
+    uses: Liquipedia/CI-templates/.github/workflows/.php-ci.yml@main
