--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
 	"name": "liquipedia/sqllint",
+	"description": "A thin wrapper around the SqlParser from the phpMyAdmin project which can be used to lint any amount of sql files from the command line.",
 	"version": "1.0.2",
 	"type": "library",
 	"license": "GPL-2.0-or-later",
