add junit compatible report

--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
 	"name": "liquipedia/sqllint",
 	"description": "A thin wrapper around the SqlParser from the phpMyAdmin project which can be used to lint any amount of sql files from the command line.",
-	"version": "1.0.3",
+	"version": "1.1.0",
 	"type": "library",
 	"license": "GPL-2.0-or-later",
-	"keywords": [ "sql", "lint" ],
+	"keywords": [ "sql", "lint", "junit" ],
 	"authors": [
 		{
 			"name": "Alex Winkler",
